--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <h1>People entered:</h1>
     <h2 id="countDown">0</h2>
-    <button id="increment-btn">increment-btn</button>
+    <button id="increment-btn">INCREMENT</button>
+    <button id="save-btn">SAVE</button>
 </body>
 </html>
