--- a/index.html
+++ b/index.html
@@ -14,7 +14,24 @@
 <body>
     <h1>People entered:</h1>
     <h2 id="countDown">0</h2>
-    <button id="increment-btn">INCREMENT</button>
-    <button id="save-btn">SAVE</button>
+    <button id="increment-btn" onclick="increment()">INCREMENT</button>
+    <button id="save-btn" onclick="save()">SAVE</button>
+    <p id="save-el">Previous entries: </p>
+    <p id="demo"></p>
 </body>
 </html>
+
+<!-- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="script.js" defer></script>
+</head>
+<body>
+    <p id="welcomeEl"></p>
+</body>
+</html> -->
