--- a/index.html
+++ b/index.html
@@ -9,29 +9,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
+    <link href="./images/bgimg.jpg" 
+    rel="icon" 
+    type="image/x-icon" 
+    />
     <title>Passenger counter</title>
 </head>
 <body>
+   <div class="container">
     <h1>People entered:</h1>
     <h2 id="countDown">0</h2>
     <button id="increment-btn" onclick="increment()">INCREMENT</button>
     <button id="save-btn" onclick="save()">SAVE</button>
     <p id="save-el">Previous entries: </p>
     <p id="demo"></p>
+   </div>
+
 </body>
 </html>
-
-<!-- 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="script.js" defer></script>
-</head>
-<body>
-    <p id="welcomeEl"></p>
-</body>
-</html> -->
